config-root/namespaces/jx-staging/node-http-watch-pipeline-activity/node-http-watch-pipeline-activity-node-http-watch-pipeline-acti-deploy.yaml
# Source: node-http-watch-pipeline-activity/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-http-watch-pipeline-activity-node-http-watch-pipeline-acti
  labels:
    draft: draft-app
    chart: "node-http-watch-pipeline-activity-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: node-http-watch-pipeline-activity-node-http-watch-pipeline-acti
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: node-http-watch-pipeline-activity-node-http-watch-pipeline-acti
    spec:
      serviceAccountName: node-http-watch-pipeline-activity-node-http-watch-pipeline-acti
      containers:
        - name: node-http-watch-pipeline-activity
          image: "gcr.io/artful-zone-312202/node-http-watch-pipeline-activity:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
