config-root/namespaces/jx-staging/node-http-watch-pipeline-activity/node-http-watch-pipeline-activity-svc.yaml
# Source: node-http-watch-pipeline-activity/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-http-watch-pipeline-activity
  labels:
    chart: "node-http-watch-pipeline-activity-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: node-http-watch-pipeline-activity-node-http-watch-pipeline-acti
