config-root/namespaces/jx-staging/node-http-watch-pipeline-activity/node-http-watch-pipeline-activity-ingress.yaml
# Source: node-http-watch-pipeline-activity/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'node-http-watch-pipeline-activity'
  name: node-http-watch-pipeline-activity
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: node-http-watch-pipeline-activity
              servicePort: 80
      host: node-http-watch-pipeline-activity-jx-staging.35.193.120.113.nip.io
